@@ -9,6 +9,8 @@ Also updated the associated libraries (\pkg{tatami_chunked} and \pkg{tatami_r}) 
 \item Automatically attempt to use \pkg{beachmat.hdf5} (if installed) when encountering the various \pkg{HDF5Array} classes.
 
 \item Minor optimization when dealing with some known no-op matrices, e.g., \code{WrapperArraySeed} objects from \pkg{alabaster.matrix}.
+
+\item Map delayed type coercions from \code{type<-} to their corresponding native representations (or no-ops).
 }}
 
 \section{Version 2.14.0}{\itemize{
